--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* importing josefin sans and eb garamond */
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Charm:wght@400;700&family=Josefin+Sans:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Lavishly+Yours&family=Josefin+Sans:wght@300;400;500&display=swap");
 
 * {
   margin: 0;
@@ -61,8 +61,10 @@ header + .section-1 {
 }
 
 header + .section-1 p:nth-child(1) {
-  font-family: "Charm", cursive;
-  font-size: 48px;
+  font-family: 'Lavishly Yours', cursive;
+  font-size: 60px;
+  font-weight: bold;
+  letter-spacing: 1px;
   padding: 0.5em;
 }
 
